Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -11,213 +11,15 @@ parameters:
     displayName: LinuxPackage
     type: string
 
-  - name: All
-    displayName: All
-    type: boolean
-    default: false
-
-  - name: Debian
-    displayName: Debian
-    type: boolean
-    default: false
-
-  - name: Ubuntu
-    displayName: Ubuntu
-    type: boolean
-    default: false
-
-  - name: Alpine
-    displayName: Alpine
-    type: boolean
-    default: false
-
-  - name: Debian_Arm64
-    displayName: Debian_Arm64
-    type: boolean
-    default: false
-
-  - name: Ubuntu_Arm64
-    displayName: Ubuntu_Arm64
-    type: boolean
-    default: false
-
-  - name: Alpine_Arm64
-    displayName: Alpine_Arm64
-    type: boolean
-    default: false
-
 jobs:
-  - job: DockerImagecreation
-    displayName: 'Docker image creation'
+  - job: KubernetesImagecreation
+    displayName: 'Kubernetes image creation'
     timeoutInMinutes: 0
     pool:
-      vmImage: 'ubuntu-latest'  
+      vmImage: 'ubuntu-latest'
     
     steps:
-      - task: PowerShell@2
-        inputs:
-          targetType: 'inline'
-          script: |
-            sudo docker run --privileged --rm tonistiigi/binfmt --install all
-
-      - task: PowerShell@2
-        inputs:
-          targetType: 'inline'
-          script: |
-            sudo docker buildx ls
-
-      - task: Bash@3
-        inputs:
-          targetType: 'inline'
-          script: |
-            sudo wget '${{parameters.linux_package}}'
-            sudo apt install unzip 
-            sudo unzip BoldBIEnterpriseEdition_Linux_*
-            IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
-            echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
-            echo "Find the Tag: $IMAGE_TAG"
-        continueOnError: true
-
-      - ${{ if or(eq(parameters.All, true), eq(parameters.Debian, true)) }}:
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'dockeimage-kings-test'
-            repository: 'kingsleywills/scanning'
-            command: 'buildAndPush'
-            Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-debian.Dockerfile
-            tags: |
-              $(TAG)_Debian_dev
-          displayName: Docker push Debian Image
-          continueOnError: true   # Adding continueOnError directive at the task level
-          env:
-            DOCKER_CLI_EXPERIMENTAL: enabled
-          
-          # Cleanup command runs after the Docker push
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo docker rmi $(docker images -q) -f
-              sudo docker system prune -a --force
-
-      - ${{ if or(eq(parameters.All, true), eq(parameters.Ubuntu, true)) }}:
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'dockeimage-kings-test'
-            repository: 'kingsleywills/scanning'
-            command: 'buildAndPush'
-            Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-ubuntu.Dockerfile
-            tags: |
-              $(TAG)_Ubuntu_dev
-          displayName: Docker push Ubuntu Image
-          continueOnError: true   # Adding continueOnError directive at the task level
-          env:
-            DOCKER_CLI_EXPERIMENTAL: enabled
-          
-          # Cleanup command runs after the Docker push
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo docker rmi $(docker images -q) -f
-              sudo docker system prune -a --force
-
-      - ${{ if or(eq(parameters.All, true), eq(parameters.Debian_Arm64, true)) }}:
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'dockeimage-kings-test'
-            repository: 'kingsleywills/scanning'
-            command: 'buildAndPush'
-            Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-debian-arm64.Dockerfile
-            tags: |
-              $(TAG)_Debian_Arm64_dev
-          displayName: Docker push Debian-Arm64 Image
-          continueOnError: true   # Adding continueOnError directive at the task level
-          env:
-            DOCKER_CLI_EXPERIMENTAL: enabled
-          
-          # Cleanup command runs after the Docker push
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo docker rmi $(docker images -q) -f
-              sudo docker system prune -a --force
-
-      - ${{ if or(eq(parameters.All, true), eq(parameters.Ubuntu_Arm64, true)) }}:
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'dockeimage-kings-test'
-            repository: 'kingsleywills/scanning'
-            command: 'buildAndPush'
-            Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-ubuntu-arm64.Dockerfile
-            tags: |
-              $(TAG)_Ubuntu_Arm64_dev
-          displayName: Docker push Ubuntu-Arm64 Image
-          continueOnError: true   # Adding continueOnError directive at the task level
-          env:
-            DOCKER_CLI_EXPERIMENTAL: enabled
-          
-          # Cleanup command runs after the Docker push
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo docker rmi $(docker images -q) -f
-              sudo docker system prune -a --force
-        
-      - ${{ if or(eq(parameters.All, true), eq(parameters.Alpine, true)) }}:
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo cp -r BoldBIEnterpriseEdition-Linux/entrypoint.sh BoldBIEnterpriseEdition-Linux/application/
-              echo "alpine entrypoint.sh file replaced successfully"
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'dockeimage-kings-test'
-            repository: 'kingsleywills/scanning'
-            command: 'buildAndPush'
-            Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-alpine.Dockerfile
-            tags: |
-              $(TAG)_Alpine_dev
-          displayName: Docker push Alpine Image
-          continueOnError: true   # Adding continueOnError directive at the task level
-          env:
-            DOCKER_CLI_EXPERIMENTAL: enabled
-          
-          # Cleanup command runs after the Docker push
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo docker rmi $(docker images -q) -f
-              sudo docker system prune -a --force
-        
-      - ${{ if or(eq(parameters.All, true), eq(parameters.Alpine_Arm64, true)) }}:
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo cp -r BoldBIEnterpriseEdition-Linux/entrypoint.sh BoldBIEnterpriseEdition-Linux/application/
-              echo "alpine entrypoint.sh file replaced successfully"
-        - task: Docker@2
-          inputs:
-            containerRegistry: 'dockeimage-kings-test'
-            repository: 'kingsleywills/scanning'
-            command: 'buildAndPush'
-            Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-alpine-arm64.Dockerfile
-            tags: |
-              $(TAG)_Alpine_Arm64_dev
-          displayName: Docker push Alpine-Arm64 Image
-          continueOnError: true   # Adding continueOnError directive at the task level
-          env:
-            DOCKER_CLI_EXPERIMENTAL: enabled
-          
-          # Cleanup command runs after the Docker push
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              sudo docker rmi $(docker images -q) -f
-              sudo docker system prune -a --force  
+      - checkout: git://bold-bi/boldbi-ci
+        displayName: 'Checkout bold-bi repo'
+        persistCredentials: true # If needed
+        clean: true # Clean any existing code before checkout
