Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -6,10 +6,10 @@
 trigger:
   - none
 
-parameters:
-  - name: linux_package
-    displayName: LinuxPackage
-    type: string
+#parameters:
+ # - name: linux_package
+  #  displayName: LinuxPackage
+   # type: string
 
 jobs:
   - job: KubernetesImagecreation
