Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -24,7 +24,7 @@ jobs:
         targetType: 'inline'
         script: |
           git config --global credential.helper "store --file=.git-credentials"
-          echo "https://boldbi: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@github.com" >> .git-credentials
+          echo "https://SivanesanSyncfusion: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@github.com" >> .git-credentials
           git clone -b hotfix/boldbi_v7 https://github.com/bold-bi/boldbi-ci.git
     
 #    steps:
