--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -26,8 +26,8 @@ jobs:
           sudo apt update
           sudo apt install git
           git config --global credential.helper "store --file=.git-credentials"
-          echo "https://SivanesanSyncfusion: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@github.com" >> .git-credentials
-          git clone -b hotfix/boldbi_v7 https://github.com/bold-bi/boldbi-ci.git
+          echo "https://KingsleyAnbinnesan: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@github.com" >> .git-credentials
+          git clone -b v6 https://github.com/KingsleyAnbinnesan/azure-arm-template.git
     
 #    steps:
 #      - checkout: self 
