--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -6,6 +6,9 @@
 trigger:
   - none
 
+variables:
+  AzureGitToken: "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"
+
 #parameters:
  # - name: linux_package
   #  displayName: LinuxPackage
@@ -19,6 +22,13 @@ jobs:
       vmImage: 'ubuntu-latest'
     
     steps:
+    - task: DownloadGitHubRelease@0
+      inputs:
+        connection: 'kubernetes-image-custom'
+        userRepository: 'bold-bi/boldbi-ci'
+        defaultVersionType: 'latest'
+        downloadPath: '$(System.ArtifactsDirectory)'
+      
     - script: |
         GitHubRepository="https://github.com/bold-bi/boldbi-ci.git"           
         echo "##vso[task.setvariable variable=GitHubRepo]$GitHubRepository"
