--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -61,7 +61,7 @@ jobs:
           sudo apt install git
           repository=$(echo '$(GitHubRepo)' | cut -c 19-)
           echo "$repository"
-          git_token_repo="https://$(AzureGit-Token)@github.com${repository}"
+          git_token_repo="https://$(AzureGitToken)@github.com${repository}"
           echo "$git_token_repo"
           git clone -b '$(GitBranch)' "$git_token_repo" azure-boldbi
           cd azure-boldbi
