Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -62,8 +62,8 @@ jobs:
           sudo mkdir -p /BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
           echo "appdatafiles directory created"
           appdatafilesDirectory=/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles
-          installutilsFolderSource=/BoldBIEnterpriseEdition-Linux/application/utilities/installutils
-          installutilsFolderDestination=/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils
+          installutilsFolderSource= "/BoldBIEnterpriseEdition-Linux/application/utilities/installutils"
+          installutilsFolderDestination= "/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils"
           sudo cp -r $installutilsFolderSource $installutilsFolderDestination
           echo "installutils are moved into appdatafiles"
         displayName: 'Create appdatafiles directory and copy installutils folder'
