--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -55,15 +55,22 @@ jobs:
             sudo unzip BoldBIEnterpriseEdition_Linux_*
             IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
             echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
-            echo "Find the Image Tag: $IMAGE_TAG"      
+            echo "Find the Image Tag: $TAG"
+            sudo mkdir -p /BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
+            echo "appdatafiles directory created"
+            appdatafilesDirectory=/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles
+            installutilsFolderSource= "/BoldBIEnterpriseEdition-Linux/application/utilities/installutils"
+            installutilsFolderDestination= "/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils"
+            sudo cp -r $installutilsFolderSource $installutilsFolderDestination
+            echo "installutils are moved into appdatafiles"   
         continueOnError: true
       
-      - script: |
-          sudo mkdir -p /BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
-          echo "appdatafiles directory created"
-          appdatafilesDirectory=/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles
-          installutilsFolderSource= "/BoldBIEnterpriseEdition-Linux/application/utilities/installutils"
-          installutilsFolderDestination= "/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils"
-          sudo cp -r $installutilsFolderSource $installutilsFolderDestination
-          echo "installutils are moved into appdatafiles"
-        displayName: 'Create appdatafiles directory and copy installutils folder'
+#      - script: |
+#          sudo mkdir -p /BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
+#          echo "appdatafiles directory created"
+#          appdatafilesDirectory=/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles
+#          installutilsFolderSource= "/BoldBIEnterpriseEdition-Linux/application/utilities/installutils"
+#          installutilsFolderDestination= "/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils"
+#          sudo cp -r $installutilsFolderSource $installutilsFolderDestination
+#          echo "installutils are moved into appdatafiles"
+#        displayName: 'Create appdatafiles directory and copy installutils folder'
