--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -50,7 +50,7 @@ jobs:
             sudo wget "${{parameters.linux_package}}"
             sudo apt install -y unzip 
             sudo unzip BoldBIEnterpriseEdition_Linux_*
-            IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
+            IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_\K[\d\.]+_\d{8}_\d{6}')
             echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
             echo "Find the Image Tag: $TAG"
             sudo mkdir -p /home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
